# terra-py-form

./: .gitignore  README.md  pyproject.toml
docs/: DESIGN.md  SPEC.md
examples/: simple.yaml  test_full_features.yaml  test_quick_start.yaml
src/terra_py_form/: __init__.py  cli.py
src/terra_py_form/cold/: __init__.py  graph.py  parser.py  planner.py  solver.py  state.py
src/terra_py_form/hot/: __init__.py
src/terra_py_form/hot/adapters/: __init__.py  aws.py
tests/: conftest.py  test_cli_e2e.py  test_integration.py
tests/cold/: test_graph.py  test_graph_edge.py  test_parser.py  test_parser_edge.py  test_planner.py  test_solver.py  test_state.py  test_state_edge.py
tests/hot/: test_aws_adapter.py  test_aws_adapter_unit.py
